[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scenes/Part03_Entry.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Part03_Ditch.tscn" type="PackedScene" id=2]
[ext_resource path="res://Animations/Player00.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Objects/MusicMixer.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/BaseScene.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Part03_MaintenanceRoom.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Part03.gd" type="Script" id=7]
[ext_resource path="res://Assets/Sounds/Door01.wav" type="AudioStream" id=8]
[ext_resource path="res://Objects/DefaultCamera.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Sounds/Door00.wav" type="AudioStream" id=10]
[ext_resource path="res://Objects/Player.tscn" type="PackedScene" id=12]
[ext_resource path="res://Assets/Environmnent/Wall08.png" type="Texture" id=14]

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_intensity = 0.1
glow_strength = 0.9
glow_blend_mode = 0
glow_hdr_threshold = 0.1

[node name="Part03" type="Node2D"]

[node name="BaseScene" parent="." instance=ExtResource( 5 )]
script = ExtResource( 7 )
fade_in_after = 0.1
fade_in_duration = 1.0

[node name="Player" parent="BaseScene" instance=ExtResource( 12 )]
position = Vector2( 154.16, -8885.66 )
scale = Vector2( 0.7, 0.7 )
animation_frames = ExtResource( 3 )

[node name="DefaultCamera" parent="BaseScene/Player" instance=ExtResource( 9 )]
smoothing_enabled = false

[node name="WorldEnvironment" type="WorldEnvironment" parent="BaseScene"]
environment = SubResource( 1 )

[node name="Darkness" type="CanvasModulate" parent="BaseScene"]
light_mask = 524288
color = Color( 0.0980392, 0.0980392, 0.0980392, 1 )

[node name="MusicMixer" parent="BaseScene" instance=ExtResource( 4 )]

[node name="Environment" type="Node2D" parent="BaseScene"]

[node name="Background" type="Sprite" parent="BaseScene/Environment"]
light_mask = 0
position = Vector2( -178.579, 538.571 )
scale = Vector2( 0.885024, 1 )
z_index = -4
texture = ExtResource( 14 )
region_enabled = true
region_rect = Rect2( 0, 0, 18000, 15000 )

[node name="Entry" parent="BaseScene/Environment" instance=ExtResource( 1 )]
position = Vector2( 189.226, -2801.1 )
scale = Vector2( 1, 1.04 )

[node name="Ditch" parent="BaseScene/Environment" instance=ExtResource( 2 )]
position = Vector2( 440.091, 2731.13 )
scale = Vector2( 0.993, 1 )

[node name="MaintenanceRoom" parent="BaseScene/Environment" instance=ExtResource( 6 )]
position = Vector2( 436.038, 3331.76 )

[node name="Trigger" type="Node2D" parent="BaseScene"]

[node name="DitchSpawn" type="Node2D" parent="BaseScene/Trigger"]
position = Vector2( 4807.86, 2596.82 )

[node name="MaintenanceRoomSpawn" type="Node2D" parent="BaseScene/Trigger"]
position = Vector2( 4839.76, 4621.78 )

[node name="Sound" type="Node" parent="BaseScene"]

[node name="DoorOpenSound" type="AudioStreamPlayer" parent="BaseScene/Sound"]
stream = ExtResource( 8 )

[node name="SilentDoorOpenSound" type="AudioStreamPlayer" parent="BaseScene/Sound"]
stream = ExtResource( 10 )
